use modelguy for 3D view
fixes some rendering glitches (floating black boxes, eye tracking). Also renders faster using shaders.

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 		</style>
 		
 		<script type="text/javascript" src="modeldb.js"></script>
-		<script async type="text/javascript" src="hlms.js"></script>
+		<script async type="text/javascript" src="modelguy.js"></script>
 		<script async type="text/javascript" src="jszip.min.js"></script>
 		<script async type="text/javascript" src="FileSaver.js"></script>
 	</head>
