add new sven models and web features

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
 			<a class="about-link" href="about.html">About</a>
-			<a class="about-link" href="download.html">Model packs</a>
+			<a class="about-link" href="download.html">Model Pack</a>
 		</div>
 		<hr>
 		
@@ -100,7 +100,7 @@
 				<ul>
 					<li><a href="https://gamebanana.com/mods/cats/7276">GameBanana</a></li>
 					<li><a href="https://www.moddb.com/mods/sven-co-op/addons">ModDB</a></li>
-					<li><a href="https://distfiles.lifeisabug.com/svencoop/playermodels/svencoop_addon.7z">TWLZ player model pack</a> (<a href="https://twlz.lifeisabug.com/">TWLZ</a>)</li>
+					<li><a href="https://distfiles.lifeisabug.com/svencoop/playermodels/svencoop_addon.7z">TWLZ player model pack</a></li>
 					<li><a href="https://drive.google.com/drive/folders/1ZsBwMEqTYDEsjDT1WcQUu-zTIEgBCNuY">Uber Pack Redux</a></li>
 					<li><a href="https://drive.google.com/drive/folders/1QEaqIxKET4_QUo7PurNI-z5DKj8vijqf">snrk's Playermodel pack</a></li>
 					<li><a href="http://wwww.letonguesc.com/svencoop/models/player/">LeTongue FastDL server</a></li>
