--- a/download.html
+++ b/download.html
@@ -37,6 +37,16 @@
 			a:visited {
 				color: #6d7bc6;
 			}
+			.special {
+				font: monospace;
+				background: black;
+				padding: 0 5px;
+				color: #bbb;
+			}
+			.special2 {
+				font: monospace;
+				
+			}
 		</style>
 	</head>
 	<body>
@@ -44,26 +54,21 @@
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
 			<a class="about-link" href="about.html">About</a>
-			<a class="about-link" href="download.html">Model packs</a>
+			<a class="about-link" href="download.html">Model Pack</a>
 		</div>
 		<hr>
 		
-		
 		<div class="about-text">
-			<h2>Latest models</h2>
-			<a href="https://drive.google.com/u/0/uc?id=18moin1NN8mP7bt7RmtX59VUUIwPT8lLf&export=download">latest_models_2023_06_12.7z</a> (9029 models, 2.4 GB download, 14.2 GB extracted)
-			
+			<br>
+			<a class="download-but" href="https://drive.usercontent.google.com/download?id=1CdUOwesVK21O8xwjujbv00Gh-rMeqsVU&export=download" target="_blank">sc_models_2025-07-07.7z</a> (11,971 models, 2.8 GB download, 20 GB extracted)
 			<p>
-				This model pack contains only the latest version of each model. This is the pack you want
-				if you play on server with the .hipoly plugin (twilightzone). Otherwise, you may still see missing models because of players using different
-				model names.
-			</p>
-			<h2>All models</h2>
-			<a href="https://drive.google.com/u/0/uc?id=1RXL3E6YeVXPEYYGE4d1tVk0Mt5yGOqmg&export=download">all_models_2023_06_12.7z</a> (10739 models, 2.5 GB download, 16.7 GB extracted)
-			<p>
-				This pack includes all models in this database. It should fix more missing models if you play on a
-				server that doesn't enforce the latest "official" model names.
-				Models that don't have version suffixes will likely be the oldest versions.
+				This pack includes all models in the database.
+				<br><br>
+				To install, extract to <span class="special">svencoop_downloads</span>, found here:
+				<br>
+				<span class="special">Steam/steamapps/common/Sven Co-op/svencoop_downloads/</span>
+				<br><br>
+				You may not want to extract the <span class="special">sounds</span> folder. Model sounds sometimes trigger rapidly and drown out every other sound in the game.<br><br>
 			</p>
 		</div>
 	</body>
