--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 			.page-num-text {
 				vertical-align: middle;
 				display: inline-block;
-				width: 160px;
+				width: 200px;
 			}
 			
 			.filter-search {
@@ -344,8 +344,7 @@
 				display: inline-block;
 				margin-left: 30px;
 				vertical-align: middle;
-			}
-			
+			}			
 			.loader {
 			  color: #ffffff;
 			  font-size: 4px;
@@ -447,7 +446,7 @@
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
 			<a class="about-link" href="about.html">About</a>
-			<a class="about-link" href="download.html">Model packs</a>
+			<a class="about-link" href="download.html">Model Pack</a>
 		</div>
 		<hr>
 		
@@ -471,6 +470,7 @@
 					<td>Sort by:</td>
 					<td>
 						<select class="sort">
+							<option>Date</option>
 							<option>Name</option>
 							<option>Polys</option>
 							<option>Size</option>
@@ -530,12 +530,18 @@
 				<div class="details-table">
 					<div><div title="More polys = worse in-game performance.">Polygons:</div><div class="poly-cell"><img class="polyflame" src="flamingline.gif"/><span class="polycount">???</span></div></div>
 					<div><div title="Size exluding the preview image size and animation sounds">Size:</div><div class="filesize">???</div></div>
+					<div><div title="File modified date.
+					
+This may not match the release date of the model. Whenever a model is downloaded in-game, the modified date is set to the current date. Models without a source will likely have one of those dates.">Date:</div><div class="filedate">???</div></div>
+					<div><div title="Where the model was released. Only GameBanana pages are scanned for now.">Source:</div><div class="sauce">???</div></div>
+					<div><div title="A link to the readme text file, if included.">Readme:</div><div class="readme">???</div></div>
+					<div><div title="Whether or not the model uses colorable textures. This does not guarantee that the color sliders will work.">Colorable:</div><div class="colorable">???</div></div>
 					<div><div title="Whether or not the mouth/head moves when using voice chat.">Animated Mouth:</div><div class="has_mouth">???</div></div>
-					<div><div title="Whether or not textures and animations are stored in separate model files.">External Models:</div><div class="ext_mdl">???</div></div>
+					<!-- <div><div title="Whether or not textures and animations are stored in separate model files.">External Models:</div><div class="ext_mdl">???</div></div> -->
 					<div><div title="Hash result after merging external models, if they exist.">MD5:</div><div class="md5">???</div></div>
 					<div><div title="The name this model had when it was compiled. This often has no relation to the model, but can sometimes be used to figure out which model was used as a base.">Internal Name:</div><div class="compilename">???</div></div>
-					<div><div title="Other names that this model has been distributed with. Server owners have been known to rename models. I'll also rename a newly released model if the author's intended name is already in use.">Known Aliases:</div><div class="aliases">???</div></div>
-					<div class="sound_table_row"><div title="Sounds that play during animations.">Sounds:</div><div class="sounds">???</div></div>					
+					<div><div title="Other names that this model has been distributed with. Server owners sometimes rename models. I'll also rename a newly released model if the creator's intended name is already in use.">Known Aliases:</div><div class="aliases">???</div></div>
+					<div class="sound_table_row"><div title="Sounds that play during animations.">Sounds:</div><div class="sounds">???</div></div>
 				</div>
 				<div class="download-but-container">
 					<div class="download-but"><span class="download-but-text">Download model</span><div class="download-loader loader hidden"></div></div>
@@ -558,7 +564,7 @@
 		</div>
 		
 		<small class="last-update-time" title="Last time I downloaded stuff from GameBanana and uploaded here">
-			Last updated: June 12, 2023
+			Last updated: July 7, 2025
 		</small>
 		<br>
 		
