--- a/download.html
+++ b/download.html
@@ -68,7 +68,7 @@
 				<br>
 				<span class="special">Steam/steamapps/common/Sven Co-op/svencoop_downloads/</span>
 				<br><br>
-				You may not want to extract the <span class="special">sounds</span> folder. Model sounds sometimes trigger rapidly and drown out every other sound in the game.<br><br>
+				You may not want to extract the <span class="special">sound</span> folder. Model sounds sometimes trigger rapidly and drown out every other sound in the game.<br><br>
 			</p>
 		</div>
 	</body>
