add group photo page
very laggy

--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
 			<a class="about-link" href="index.html">Home</a>
 			<a class="about-link" href="about.html">About</a>
 			<a class="about-link" href="download.html">Model Pack</a>
+			<a class="about-link" href="photo.html">Group Photo</a>
 		</div>
 		<hr>
 		
