rename vo pack models
many of these were intended to be updated versions that replace the originals. A new version suffix was added instead of replacing the original model. _vo suffix was kept for models that never had voices

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 			<p>
 				Version suffixes (e.g. "_v2") are added and necessary because servers can't overwrite existing models in your model
 				folder. If a server wants to automatically distribute an updated model, then that model has to have a
-				new name or else many players won't see it.
+				new name or else many players won't see it. Part of the model name may be shortened to make room for this suffix. Model names can be 22 characters max before the game fails to load them.
 			</p>
 			<p>
 				Model names are also lowercased so that they can easily be served on Linux FastDL
