namespace hl/sc web pages

--- a/hl/download.html
+++ b/hl/download.html
@@ -20,7 +20,6 @@
 			}
 			h2 {
 				color: #f88;
-				text-align: center;
 			}
 			.header-links {
 				text-align: center;
@@ -38,31 +37,17 @@
 			a:visited {
 				color: #6d7bc6;
 			}
-			.photo-container {
-				margin: 0 100px;
-				position: relative;
-			}
-			.friend {
-				position: absolute;
-				top: 0;
-				left: 0;
-			}
-			.friend-count-container {
-				position: fixed;
-				transform: translate(-50%, 0);
-				left: 50%;
-				bottom: 0;
-			}
-			.current-date {
-				color: red;
+			.special {
+				font: monospace;
 				background: black;
 				padding: 0 5px;
-				font-family: monospace;
-				font-size: 1.1em;
+				color: #bbb;
+			}
+			.special2 {
+				font: monospace;
+				
 			}
 		</style>
-		
-		<script type="text/javascript" src="modeldb.js"></script>
 	</head>
 	<body>
 		<h1>Sven Co-op Model Database</h1>
@@ -74,11 +59,11 @@
 		</div>
 		<hr>
 		
-		<h2>The database wishes you a very happy <span class="current-date">CURRENT DAY</span></h2>
-		<div class="photo-container">
+		<div class="about-text">
+			<p>
+				A player model pack is coming soon!
+			</p>
 		</div>
-		<div class="friend-count-container">Posing <span class="friend-count">?</span> friends...</div>
-		
 	</body>
 	
 </html>
