--- a/hl/index.html
+++ b/hl/index.html
@@ -434,10 +434,10 @@
 			}
 		</style>
 		
-		<script type="text/javascript" src="modeldb.js"></script>
-		<script async type="text/javascript" src="modelguy.js"></script>
-		<script async type="text/javascript" src="jszip.min.js"></script>
-		<script async type="text/javascript" src="FileSaver.js"></script>
+		<script type="text/javascript" src="../modeldb.js"></script>
+		<script async type="text/javascript" src="../modelguy.js"></script>
+		<script async type="text/javascript" src="../jszip.min.js"></script>
+		<script async type="text/javascript" src="../FileSaver.js"></script>
 	</head>
 	<textarea class="debug hidden"></textarea>
 	
