add game selector for root page

--- a/hl/index.html
+++ b/hl/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<title>Sven Co-op Model Database</title>
+		<title>Half-Life Model Database</title>
 		
 		<style>
 			body {
@@ -442,7 +442,7 @@
 	<textarea class="debug hidden"></textarea>
 	
 	<body>
-		<h1>Sven Co-op Model Database</h1>
+		<h1>Half-Life Model Database</h1>
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
 			<a class="about-link" href="about.html">About</a>
