--- a/hl/index.html
+++ b/hl/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<title>Half-Life Model Database</title>
+		<title>Half-Life Player Models</title>
 		
 		<style>
 			body {
@@ -181,6 +181,8 @@
 			.filter-search {
 				text-align: center;
 				width: 100%;
+				z-index: 10;
+				position: relative;
 			}
 			#name-filter {
 				font-size: 28px;
@@ -442,7 +444,7 @@
 	<textarea class="debug hidden"></textarea>
 	
 	<body>
-		<h1>Half-Life Model Database</h1>
+		<h1>Half-Life Player Models</h1>
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
 			<a class="about-link" href="about.html">About</a>
