--- a/sc/photo.html
+++ b/sc/photo.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<title>Sven Co-op Model Database</title>
+		<title>Sven Co-op Player Models</title>
 		
 		<style>			
 			body {
@@ -65,7 +65,7 @@
 		<script type="text/javascript" src="../modeldb.js"></script>
 	</head>
 	<body>
-		<h1>Sven Co-op Model Database</h1>
+		<h1>Sven Co-op Player Models</h1>
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
 			<a class="about-link" href="about.html">About</a>
