reisze model names to fit container

--- a/hl/index.html
+++ b/hl/index.html
@@ -45,6 +45,7 @@
 				overflow: hidden;
 				text-overflow: ellipsis;
 				white-space: nowrap;
+				line-height: 18px;
 			}
 			.model-cell img {
 				width: 125px;
