update repo links

--- a/hl/about.html
+++ b/hl/about.html
@@ -66,13 +66,13 @@
 			</p>
 			
 			<p>
-				<a href="https://github.com/wootguy/scmodels">Source code for this site</a>
+				<a href="https://github.com/wootguy/pmodels">Source code for this site</a>
 			</p>
 			
 			<h2>Model names</h2>
 			<p>
 				People often copy-paste models and then rename them. These renamed models then get distributed in model packs.
-				Because of this, I don't know if any of the model names here are correct. <a href="https://github.com/wootguy/scmodels/issues/new">Let me know</a>
+				Because of this, I don't know if any of the model names here are correct. <a href="https://github.com/wootguy/pmodels/issues/new">Let me know</a>
 				if a model name is wrong and I'll fix it (preferably with some proof like a GameBanana link).
 			</p>
 			
