--- a/hl/about.html
+++ b/hl/about.html
@@ -3,41 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
 		<title>Half-Life Player Models</title>
-		
-		<style>			
-			body {
-				max-width: 1450px;
-				margin: 0 auto;
-				background: #222;
-				color: #ddd;
-				font-family: sans-serif;
-			}
-			h1 {
-				text-align: center;
-				margin-bottom: 5px;
-			}
-			h2 {
-				color: #f88;
-			}
-			.header-links {
-				text-align: center;
-			}
-			.about-link {
-				padding: 0 15px;
-			}
-			.about-text {
-				margin: 0 auto;
-				max-width: 600px;
-			}
-			a:link {
-				color: #6baff8;
-			}
-			a:visited {
-				color: #6d7bc6;
-			}
-		</style>
+		<style>html{visibility: hidden;background: #222;}</style>
+		<link rel="stylesheet" href="../modeldb.css">
 	</head>
 	<body>
 		<h1>Half-Life Player Models</h1>
