--- a/sc/download.html
+++ b/sc/download.html
@@ -3,51 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
 		<title>Sven Co-op Player Models</title>
-		
-		<style>			
-			body {
-				max-width: 1450px;
-				margin: 0 auto;
-				background: #222;
-				color: #ddd;
-				font-family: sans-serif;
-			}
-			h1 {
-				text-align: center;
-				margin-bottom: 5px;
-			}
-			h2 {
-				color: #f88;
-			}
-			.header-links {
-				text-align: center;
-			}
-			.about-link {
-				padding: 0 15px;
-			}
-			.about-text {
-				margin: 0 auto;
-				max-width: 600px;
-			}
-			a:link {
-				color: #6baff8;
-			}
-			a:visited {
-				color: #6d7bc6;
-			}
-			.special {
-				font: monospace;
-				background: black;
-				padding: 0 5px;
-				color: #bbb;
-			}
-			.special2 {
-				font: monospace;
-				
-			}
-		</style>
+		<style>html{visibility: hidden;background: #222;}</style>
+		<link rel="stylesheet" href="../modeldb.css">
 	</head>
 	<body>
 		<h1>Sven Co-op Player Models</h1>
@@ -61,7 +19,7 @@
 		
 		<div class="about-text">
 			<br>
-			<a class="download-but" href="https://drive.usercontent.google.com/download?id=1c0dCPcbzslmbLoQIlT0kAUajU_DeNtA3&export=download" target="_blank">sc_models_2025-07-12.7z</a> (11,935 models, 2.8 GB download, 20 GB extracted)
+			<a href="https://drive.usercontent.google.com/download?id=1c0dCPcbzslmbLoQIlT0kAUajU_DeNtA3&export=download" target="_blank">sc_models_2025-07-12.7z</a> (11,935 models, 2.8 GB download, 20 GB extracted)
 			<p>
 				This pack includes all models in the database.
 				<br><br>
