fix flaming poly effect

--- a/hl/index.html
+++ b/hl/index.html
@@ -101,7 +101,7 @@
 			<div class="details">
 				<h2 class="details-header">Header text</h2>
 				<div class="details-table">
-					<div><div title="More polys = worse in-game performance.">Polygons:</div><div class="poly-cell"><img class="polyflame" src="flamingline.gif"/><span class="polycount">???</span></div></div>
+					<div><div title="More polys = worse in-game performance.">Polygons:</div><div class="poly-cell"><img class="polyflame" src="../flamingline.gif"/><span class="polycount">???</span></div></div>
 					<div><div title="Size exluding the preview image size and animation sounds">Size:</div><div class="filesize">???</div></div>
 					<div><div title="File modified date.
 					
