add game links and colors

--- a/hl/about.html
+++ b/hl/about.html
@@ -5,9 +5,16 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Half-Life Player Models</title>
 		<style>html{visibility: hidden;background: #222;}</style>
+		<link rel="stylesheet" href="hl.css">
 		<link rel="stylesheet" href="../modeldb.css">
 	</head>
 	<body>
+		<div class="game-links">
+			<div class="game-links-header">Change game:</div>
+			<a class="game-link" href="../hl/about.html">Half-Life</a>
+			<div class="game-link-sep">|</div>
+			<a class="game-link" href="../sc/about.html">Sven Co-op</a>
+		</div>
 		<h1>Half-Life Player Models</h1>
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
@@ -16,8 +23,6 @@
 			<a class="about-link" href="photo.html">Group Photo</a>
 		</div>
 		<hr>
-		
-		
 		<div class="about-text">
 			<h2>About</h2>
 			<p>
