--- a/hl/photo.html
+++ b/hl/photo.html
@@ -5,10 +5,17 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Half-Life Player Models</title>
 		<style>html{visibility: hidden;background: #222;}</style>
+		<link rel="stylesheet" href="hl.css">
 		<link rel="stylesheet" href="../modeldb.css">
 		<script type="text/javascript" src="../modeldb.js"></script>
 	</head>
 	<body>
+		<div class="game-links">
+			<div class="game-links-header">Change game:</div>
+			<a class="game-link" href="../hl/photo.html">Half-Life</a>
+			<div class="game-link-sep">|</div>
+			<a class="game-link" href="../sc/photo.html">Sven Co-op</a>
+		</div>
 		<h1>Half-Life Player Models</h1>
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
