--- a/sc/index.html
+++ b/sc/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Sven Co-op Player Models</title>
 		<style>html{visibility: hidden;background: #222;}</style>
+		<link rel="stylesheet" href="sc.css">
 		<link rel="stylesheet" href="../modeldb.css">
 		<script type="text/javascript" src="../modeldb.js"></script>
 		<script async type="text/javascript" src="../modelguy.js"></script>
@@ -14,6 +15,12 @@
 	<textarea class="debug hidden"></textarea>
 	
 	<body>
+		<div class="game-links">
+			<div class="game-links-header">Change game:</div>
+			<a class="game-link" href="../hl/index.html">Half-Life</a>
+			<div class="game-link-sep">|</div>
+			<a class="game-link" href="../sc/index.html">Sven Co-op</a>
+		</div>
 		<h1>Sven Co-op Player Models</h1>
 		<div class="header-links">
 			<a class="about-link" href="index.html">Home</a>
