--- a/hl/download.html
+++ b/hl/download.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 		<title>Half-Life Player Models</title>
 		<style>html{visibility: hidden;background: #222;}</style>
 		<link rel="stylesheet" href="hl.css">
