--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<title>Player Model Database</title>
 		
 		<style>
