add HL models from gamer-lab
https://gamer-lab.com/eng/goldsrc/Player_models/Half-life-Opposing_Force-Blue_Shift

--- a/hl/about.html
+++ b/hl/about.html
@@ -75,10 +75,8 @@
 				<ul>
 					<li><a href="https://gamebanana.com/mods/cats/7276">GameBanana</a></li>
 					<li><a href="https://www.moddb.com/mods/sven-co-op/addons">ModDB</a></li>
-					<li><a href="https://distfiles.lifeisabug.com/svencoop/playermodels/svencoop_addon.7z">TWLZ player model pack</a></li>
-					<li><a href="https://drive.google.com/drive/folders/1ZsBwMEqTYDEsjDT1WcQUu-zTIEgBCNuY">Uber Pack Redux</a></li>
-					<li><a href="https://drive.google.com/drive/folders/1QEaqIxKET4_QUo7PurNI-z5DKj8vijqf">snrk's Playermodel pack</a></li>
-					<li><a href="http://wwww.letonguesc.com/svencoop/models/player/">LeTongue FastDL server</a></li>
+					<li><a href="https://gamer-lab.com/eng/goldsrc/Player_models/Half-life-Opposing_Force-Blue_Shift">Gamer-Lab</a></li>
+					<li><a href="../sc/about.html">Sven Co-op DB (modelguy ports)</a></li>
 					<li>whatever I had in my downloads folder</li>
 					<li>whatever <i>you</i> had in your downloads folder (feel free to send your entire player models folder)</li>
 				</ul>
