--- a/hl/index.html
+++ b/hl/index.html
@@ -38,13 +38,9 @@
 				<tr>
 					<td>Category:</td>
 					<td>
-						<select class="categories">
+						<select disabled class="categories">
 							<option>All</option>
 						</select>
-					</td>
-					<td>
-						<input type="checkbox" id="filter_ver" checked>
-						<label for="filter_ver" title="Hides previous/broken versions of models. Model versions that look significantly different are not hidden (e.g. touhou_clownpiece -> touhou_clownpiece_v2).">Hide old versions</label>
 					</td>
 				</tr>
 				<tr>
@@ -57,9 +53,25 @@
 							<option>Size</option>
 						</select>
 					</td>
+				</tr>
+			</table>
+			<table class="filter-types2">
+				<tr>
 					<td>
-						<input type="checkbox" id="filter_group">
+						<input type="checkbox" id="filter_ver" checked>
+						<label for="filter_ver" title="Hides previous/broken versions of models. Model versions that look significantly different are not hidden (e.g. touhou_clownpiece -> touhou_clownpiece_v2).">Hide old versions</label>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input disabled type="checkbox" id="filter_group">
 						<label for="filter_group" title="Groups models that are of the same character, or that look very similar. Reskins and minor edits to the same model are also grouped.">Group alternate versions</label>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input disabled type="checkbox" id="filter_nsfw">
+						<label for="filter_nsfw" title="Blur models not suitable for work.">NSFW filter</label>
 					</td>
 				</tr>
 			</table>
