port SC models to HL
Only the latest versions of each model were ported. The ports were done automatically with modelguy.
https://github.com/wootguy/modelguy

Also tagged the HL models and merged with the SC tags. Grouping isn't done yet and still disabled.

--- a/hl/index.html
+++ b/hl/index.html
@@ -38,7 +38,7 @@
 				<tr>
 					<td>Category:</td>
 					<td>
-						<select disabled class="categories">
+						<select class="categories">
 							<option>All</option>
 						</select>
 					</td>
@@ -70,7 +70,7 @@
 				</tr>
 				<tr>
 					<td>
-						<input disabled type="checkbox" id="filter_nsfw">
+						<input type="checkbox" id="filter_nsfw">
 						<label for="filter_nsfw" title="Blur models not suitable for work.">NSFW filter</label>
 					</td>
 				</tr>
