add poly limiter

--- a/hl/index.html
+++ b/hl/index.html
@@ -54,6 +54,10 @@
 						</select>
 					</td>
 				</tr>
+				<tr>
+					<td>Poly Limit:</td>
+					<td><input id="polylimit" type="text" min="0" max="1000000" step="100" value="0"></td>
+				</tr>
 			</table>
 			<table class="filter-types2">
 				<tr>
