--- a/hl/download.html
+++ b/hl/download.html
@@ -26,8 +26,27 @@
 		<hr>
 		
 		<div class="about-text">
+			<h2>All Models Pack</h2>
+			<a href="https://drive.usercontent.google.com/download?id=1i40A7qJNJShjWDts3gx-EkC7GoU7Qz8T&export=download" target="_blank">hl_models_2025-07-15.7z</a> (13,425 models, 2.9 GB download, 17.2 GB extracted)
 			<p>
-				A player model pack is coming soon!
+				This pack includes all models in the database.
+			</p>
+			
+			<h2>Low Poly Pack</h2>
+			<a href="https://drive.usercontent.google.com/download?id=14_dQNXH1jrhnKMTnqGcDYxjHvyTqqIXp&export=download" target="_blank">hl_models_lp_2025-07-15.7z</a> (6,545 models, 708 MB download, 5.2 GB extracted)
+			<p>
+				This pack excludes models with a polygon count above 1500. Old versions of models are also excluded.
+				<br><br>
+				1500 was chosen to limit the total player polys in a server to about 100k (32 players + 32 corpses). Performance issues begin at around 50k on modern hardware but it should be uncommon to see 32 players/corpses in one area, as well as for all players to choose a 1500 poly model.
+			</p>
+			
+			<h2>Installation</h2>
+			<p>
+				Extract either pack to <span class="special">valve_downloads</span>, found here:
+				<br>
+				<span class="special">Steam/steamapps/common/Half-Life/valve_downloads/</span>
+				<br><br>
+				You may not want to extract the <span class="special">sound</span> folder. Model sounds sometimes trigger rapidly and drown out every other sound in the game.
 			</p>
 		</div>
 	</body>
