add HL models from SOA FastDL
all dated 2022 but I'm pretty sure these are from around 2000. Lots of reskins and clan models.

--- a/hl/about.html
+++ b/hl/about.html
@@ -78,6 +78,7 @@
 					<li><a href="https://gamer-lab.com/eng/goldsrc/Player_models/Half-life-Opposing_Force-Blue_Shift">Gamer-Lab</a></li>
 					<li><a href="https://www.moddb.com/games/half-life/news/release-of-hldm-gold-century-megapack-best-half-life-player-models-v-11">GOLD Century Megapack</a></li>
 					<li><a href="https://forum.half-life.pro/big-pack-of-player-models-t5643.html">Hardstyle pack (+ Sneaky Ema's update)</a></li>
+					<li><a href="http://soa.site.nfoservers.com/server/models/player/">SOA FastDL</a></li>
 					<li><a href="../sc/about.html">Sven Co-op DB (modelguy ports)</a></li>
 					<li>whatever I had in my downloads folder</li>
 					<li>whatever <i>you</i> had in your downloads folder (feel free to send your entire player models folder)</li>
