--- a/sc/index.html
+++ b/sc/index.html
@@ -74,7 +74,7 @@
 				</tr>
 				<tr>
 					<td>
-						<input type="checkbox" id="filter_nsfw">
+						<input type="checkbox" id="filter_nsfw" checked>
 						<label for="filter_nsfw" title="Blur models not suitable for work.">NSFW filter</label>
 					</td>
 				</tr>
